# MP-SENet-upgrade

./: .gitignore  README.md  config-mamba.json  config-mixer.json  config-waveform.json  config.json  config.yaml  config_pcs.yaml  config_unified.json  dataset.py  eval_mpnet.ipynb  inference.py  inference_pcs.py  pcs.py  pyproject.toml  requirements.txt  run.sbatch  run_pcs.sh  run_train_pcs.sh  setup.sh  train.py  train_multi.py  train_multi_ssl.py  train_ssl.py  train_unified.py  train_waveform.py  utils.py
cal_metrics/: cal_metrics_dns.py  cal_metrics_vb.py  compute_metrics.py
cp_model_base/: config.json
cp_model_base/logs/: events.out.tfevents.1764579773.tts-temp-0.1085537.0  events.out.tfevents.1764579912.tts-temp-0.1088457.0
cp_model_big/: config.json
cp_model_big/logs/: events.out.tfevents.1764262399.tts-temp-0.696794.0  events.out.tfevents.1764323354.tts-temp-0.715535.0
cp_model_many_d/: config.json
cp_model_many_d/logs/: events.out.tfevents.1764180031.tts-temp-0.567847.0
cp_model_new_ssl/logs/: events.out.tfevents.1763914624.tts-temp-0.85045.0  events.out.tfevents.1763916321.tts-temp-0.92927.0  events.out.tfevents.1763975359.tts-temp-0.225223.0  (+3 more)
cp_model_ssl_hubert/: config.json
experiments/: eval_mpnet.ipynb  run_experiment.py  setup_env.sh
models/: GPFCA.py  Untitled  __init__.py  conformer.py  discriminator.py  generator.py  mingru.py  model.py  model_mingru.py  moe.py  rat.py  rope_attn.py  ssl_loss.py  transformer.py  transformer_mingru.py
train/: __init__.py  gtcrn.py  mpnet.py
utils/: __init__.py  checkpoint.py  dataset.py  utils.py
(+170 files in other folders)
